will sentence ext done

--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,10 @@
 
 <body>
   <p id="dialog-box"> </p>
-
-  <img id="image" src="images/icon16.png" alt="will16">
+  <div id="container" style="position:relative">
+    <img id="image" src="images/GetBackToWorkStill.jpeg" alt="will16">
+    <a id="text" href="">Click Here</a>
+  </div>
 
   <script src="popup.js"></script>
 
